# multi

./: .gitignore  CMakeLists.txt  README.md  namelist
Bmatrix_diffusion/: example_main.m
Bmatrix_diffusion/auxiliary_functions/: d2_matern.m  d_matern.m  daley_to_matern.m  matern.m  matern_to_daley.m  normalization_factor.m  optimal_inflation_factor.m
Bmatrix_diffusion/operators/: diffusion_inverse.m  diffusion_operator.m  (+3 more)
cmake/: compiler_flags_GNU_Fortran.cmake
doc/: interpolation_comparison.py  multi.bib  multi.tex
multi-analysis/: analysis_1D_plot.py  analysis_tools.py  concatenate_pickles.py  corner_plot.py  diff_methods_analysis.py  diff_methods_functions.py  diff_methods_lnlike.py  diff_methods_plots.py  matrix_plot.py  models.py  multi_analysis.py  multi_analysis_2D.py  run_analysis.py  run_analysis_2D.py
multi-analysis_randomized/: analysis_1D_plot.py  analysis_tools.py  concatenate_pickles.py  diff_methods_plots.py  ensemble_analysis_plot.py  init_state_gen.py  matrix_plot.py  run_analysis.py  run_multi.py  run_plots.py
notes/: support_multi2.aux  support_multi2.tex  support_multi3.aux  support_multi3.tex  support_multi_2D.aux  support_multi_2D.tex
src/: algo.f90  bmatrix.f90  fft.f90  hmatrix.f90  interp.f90  main.f90  rand.f90  tools_const.f90  tools_kinds.f90  tools_rand.f90  type_algo.f90  type_bmatrix.f90  type_geom.f90  type_hmatrix.f90  type_hoperator.f90  type_lmp.f90  type_rmatrix.f90
src_ensemble/: b_matrix_monitoring.py  main.f90  tools_netcdf.f90  type_algo.f90  type_hmatrix.f90  type_rmatrix.f90
talk/: abstract.txt
(+17 files in other folders)
